include/dss_capi.h

    enum LineUnits {
        LineUnits_none = 0, // No line length unit.
        LineUnits_Miles = 1, // Line length units in miles.
        LineUnits_kFt = 2, // Line length units are in thousand feet.
        LineUnits_km = 3, // Line length units are km.
        LineUnits_meter = 4, // Line length units are meters.
        LineUnits_ft = 5, // Line units in feet.
        LineUnits_inch = 6, // Line length units are inches.
        LineUnits_cm = 7, // Line units are cm.
        LineUnits_mm = 8, // Line length units are mm.
        LineUnits_Maxnum = 9 // Maximum number of line units constants.
    };
    DSS_CAPI_DLL int32_t LineGeometries_Get_Count(void);
    DSS_CAPI_DLL int32_t LineGeometries_Get_First(void);
    DSS_CAPI_DLL int32_t LineGeometries_Get_Next(void);
    DSS_CAPI_DLL char* LineGeometries_Get_Name(void);
    DSS_CAPI_DLL void LineGeometries_Set_Name(char* Value);
    DSS_CAPI_DLL int32_t LineGeometries_Get_Nconds(void);
    DSS_CAPI_DLL void LineGeometries_Set_Nconds(int32_t Value);
    DSS_CAPI_DLL int32_t LineGeometries_Get_Phases(void);
    DSS_CAPI_DLL void LineGeometries_Set_Phases(int32_t Value);
    DSS_CAPI_DLL void LineGeometries_Get_Cmatrix(double** ResultPtr, int32_t* ResultCount, double Frequency, double Length, int32_t Units);
    DSS_CAPI_DLL void LineGeometries_Get_Cmatrix_GR(double Frequency, double Length, int32_t Units);
    DSS_CAPI_DLL void LineGeometries_Get_Rmatrix(double** ResultPtr, int32_t* ResultCount, double Frequency, double Length, int32_t Units);
    DSS_CAPI_DLL void LineGeometries_Get_Rmatrix_GR(double Frequency, double Length, int32_t Units);
    DSS_CAPI_DLL void LineGeometries_Get_Xmatrix(double** ResultPtr, int32_t* ResultCount, double Frequency, double Length, int32_t Units);
    DSS_CAPI_DLL void LineGeometries_Get_Xmatrix_GR(double Frequency, double Length, int32_t Units);
    DSS_CAPI_DLL void LineGeometries_Get_Zmatrix(double** ResultPtr, int32_t* ResultCount, double Frequency, double Length, int32_t Units);
    DSS_CAPI_DLL void LineGeometries_Get_Zmatrix_GR(double Frequency, double Length, int32_t Units);
    DSS_CAPI_DLL void LineGeometries_Get_Units(int32_t** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LineGeometries_Get_Units_GR(void);
    DSS_CAPI_DLL void LineGeometries_Set_Units(int32_t *ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LineGeometries_Get_Xcoords(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LineGeometries_Get_Xcoords_GR(void);
    DSS_CAPI_DLL void LineGeometries_Set_Xcoords(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LineGeometries_Get_Ycoords(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LineGeometries_Get_Ycoords_GR(void);
    DSS_CAPI_DLL void LineGeometries_Set_Ycoords(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LineGeometries_Get_Conductors(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LineGeometries_Get_Conductors_GR(void);
    DSS_CAPI_DLL uint16_t LineGeometries_Get_Reduce(void);
    DSS_CAPI_DLL void LineGeometries_Set_Reduce(uint16_t Value);
    DSS_CAPI_DLL double LineGeometries_Get_RhoEarth(void);
    DSS_CAPI_DLL void LineGeometries_Set_RhoEarth(double Value);
    DSS_CAPI_DLL double LineGeometries_Get_NormAmps(void);
    DSS_CAPI_DLL void LineGeometries_Set_NormAmps(double Value);
    DSS_CAPI_DLL double LineGeometries_Get_EmergAmps(void);
    DSS_CAPI_DLL void LineGeometries_Set_EmergAmps(double Value);
    DSS_CAPI_DLL void LineGeometries_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LineGeometries_Get_AllNames_GR(void);
    DSS_CAPI_DLL int32_t LineGeometries_Get_idx(void);
    DSS_CAPI_DLL void LineGeometries_Set_idx(int32_t Value);